--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Descubre el Mundo de la Música</title>
-    <link rel="index.html" href="index.html">
+    <link href="estilos\styles.css" rel="stylesheet">
 </head>
 <body>
     <header>
